<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenMapKit</string>

    <string name="action_osmcredentials">OSM User Name</string>
    <string name="action_osmdownloader">OSM XML Downloader</string>
    <!-- osm menu -->
    <string name="action_osmsettings">OSM XML Layers</string>
    <string name="action_info">Info</string>
    <string name="osmChooserDialogTitle">Choose OSM XML Files</string>
    <string name="osmAppPath">openmapkit/osm</string>

    <!-- mbtiles menu -->
    <string name="action_deployments">Deployments</string>
    <string name="action_mbtilessettings">Basemap</string>
    <string name="mbtilesChooserDialogTitle">Choose Basemap</string>
    <string name="downloadOSMTitle">Download OSM Data</string>
    <string name="hotOSMOptionTitle">Online Humanitarian OpenStreetMap</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">+</string>

    <string name="mbtilesAppPath">openmapkit/mbtiles</string>

    <!-- private shared preferences for mapactivity -->
    <string name="preferenceMBTileChoice"></string>

    <string name="tags">Tags</string>
    <string name="action_settings">Settings</string>

    <!-- default tile layer -->
    <string name="defaultTileLayerPID">hot</string>
    <string name="defaultTileLayerURL">"http://a.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png"</string>
    <string name="defaultTileLayerName">"Humanitarian OpenStreetMap"</string>
    <string name="defaultTileLayerAttribution">"© OpenStreetMap Contributors"</string>

    <!-- map activity -->
    <string name="tagPromptTitle">Choose Option</string>
    <!-- list view under map-->
    <string name="tagListViewTitle">Tags</string>

    <!-- tag editing activity -->
    <string name="title_activity_tag_editor">OSM Tag Editor</string>
    <string name="editMessage">Choose Existing OSM Tag to Edit</string>

    <!-- tag creation activity -->
    <string name="title_activity_tag_creator">OSM Tag Creator</string>
    <string name="tagNameHint">Edit Tag Name</string>
    <string name="tagValueHint">Edit Tag Value</string>
    <string name="cancelButtonTitle">Cancel</string>
    <string name="saveButtonTitle">Save</string>

    <string name="title_activity_odkcollect_tag">Tags</string>

    <string name="hello_world">Hello world!</string>
    <string name="odkcollect_tag_instructions">Please fill in values for all of the following OpenStreetMap tags:</string>
    <string name="save_to_odk_collect">Save to ODK Collect</string>
    <string name="title_activity_tag_swipe">Tags</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="odkcollect_fragment_title">Confirm</string>
    <string name="odkcollect_fragment_question">Save tag edits to ODK Collect?</string>
    <string name="standalone_fragment_title">Add or Confirm</string>
    <string name="standalone_fragment_question1">Add tag?</string>
    <string name="standalone_fragment_question2">Save tag edits?</string>

    <string name="downloadOSMMessage">Do you want to download OSM XML data within the bounding box of your map?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_controlpanel">Control Panel</string>
    <string name="title_activity_deployments">Deployments</string>
    <string name="title_activity_deployment_details">Deployment Details</string>
    <string name="noname">No Name</string>
    <string name="download_complete">Deployment Complete!</string>
    <string name="download_failed">Download Failed!</string>
    <string name="serverUrl">OpenMapKit Server URL</string>
    <string name="deploymentDownloadCanceled">Deployment download canceled!</string>
    <string name="deploymentDownloadComplete">Deployment download complete!</string>

</resources>
