<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.redcross.openmapkit.odkcollect.ODKCollectTagActivityOld">

    <TextView android:text="@string/editMessage" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp" />

    <Spinner
        android:id="@+id/existingTagsSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="9dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTagName"
        android:hint="@string/tagNameHint"
        android:layout_below="@+id/existingTagsSpinner"
        android:layout_alignRight="@+id/existingTagsSpinner"
        android:layout_alignEnd="@+id/existingTagsSpinner"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTagValue"
        android:hint="@string/tagValueHint"
        android:layout_below="@+id/editTextTagName"
        android:layout_marginTop="16dp"
        android:layout_alignRight="@+id/existingTagsSpinner"
        android:layout_alignEnd="@+id/existingTagsSpinner"
        android:layout_alignLeft="@+id/editTextTagName"
        android:layout_alignStart="@+id/editTextTagName" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelButtonTitle"
        android:id="@+id/buttonCancel"
        android:layout_below="@+id/editTextTagValue"
        android:layout_alignLeft="@+id/editTextTagValue"
        android:layout_alignStart="@+id/editTextTagValue"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonTitle"
        android:id="@+id/buttonSave"
        android:layout_alignTop="@+id/buttonCancel"
        android:layout_toRightOf="@+id/buttonCancel"
        android:layout_toEndOf="@+id/buttonCancel"
        android:enabled="false" />

</RelativeLayout>
